fixing overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    max-width: 1470px;
+    max-width: 1480px;
     max-height: 100%;
     padding-left: 10px;
    
@@ -36,12 +36,11 @@ header{
 .intro{
     /*parent container: home*/
     background-color: rgb(233, 225, 170);
-    padding: 40px;
+    padding: 30px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap:30px;  
+    gap:10px;  
     height: 500px;
 }
 .my-name{
@@ -59,27 +58,24 @@ button:hover{
 }
 
 .profile-img{
-    width: 50%;
-    max-width: 100px;
-    object-fit: cover;
+    width: 150px;
     border-radius: 50%;
-    margin: 0 auto; 
+    display: block; 
 }
 .About{
     /*parent div: About*/
     height: 450px;
     background-color: rgb(239, 187, 216);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 180px;
+    gap: 200px;
+    padding-right: 10px;
 }
 .overview{
     width: 600px;
-    padding: 10px;
 }
 .overview p{
-    margin-bottom: 15px;
     line-height: 1;
 }
 .about-img{
@@ -134,3 +130,6 @@ button:hover{
 .contact ul{
     list-style-type: none; /* Removes bullet points  */
 }
+/* @media(max-width:768px){
+    .intro
+} */
